<!--  
 * pom.xml
 *
 * Copyright SVG,  Inc.
 * Copyright Leidos Biomedical Research, Inc
 * 
 * Distributed under the OSI-approved BSD 3-Clause License.
 * See http://ncip.github.com/HPC/LICENSE.txt for details.
 *
 * @author <a href="mailto:eran.rosenberg@nih.gov">Eran Rosenberg</a>
 * @version $Id$
 -->

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<name>HPC Server</name>
	<parent>
		<groupId>gov.nih.nci.hpc</groupId>
		<artifactId>hpc</artifactId>
		<version>1.0.0-SNAPSHOT</version>
	</parent>
	<artifactId>hpc-server</artifactId>
	<packaging>pom</packaging>

	<properties>
		<cxf.version>3.1.4</cxf.version>
		<cxf-xjc.version>3.0.5</cxf-xjc.version>
		<felix.version>3.0.1</felix.version>
		<postgresql.version>9.3-1102-jdbc41</postgresql.version>
		<slf4j.version>1.7.19</slf4j.version>
		<spring-security.version>3.1.4.RELEASE</spring-security.version>
		<spring.version>3.2.11.RELEASE</spring.version>
		<amazon-aws.version>1.10.62</amazon-aws.version>
		<jargon.version>4.0.2.4-RELEASE</jargon.version>
		<jargon-conveyor.version>4.0.2.1-RELEASE</jargon-conveyor.version>
		<jackson.version>2.7.3</jackson.version>
		<google-json-simple.version>1.1</google-json-simple.version>
		<commons-io.version>2.5</commons-io.version>
		<jjwt.version>0.6.0</jjwt.version>
		<java-mail.version>1.4.7</java-mail.version>
	</properties>

	<modules>
		<module>hpc-common</module>
		<module>hpc-domain-types</module>
		<module>hpc-domain-model</module>
		<module>hpc-dto</module>
		<module>hpc-dao-api</module>
		<module>hpc-dao-impl</module>
		<module>hpc-integration-api</module>
		<module>hpc-integration-impl</module>
		<module>hpc-app-service-api</module>
		<module>hpc-app-service-impl</module>
		<module>hpc-bus-service-api</module>
		<module>hpc-bus-service-impl</module>
		<module>hpc-ws-rs-api</module>
		<module>hpc-ws-rs-impl</module>
		<module>hpc-client</module>
		<module>hpc-features</module>
		<module>hpc-scheduler</module>
	</modules>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.cxf</groupId>
					<artifactId>cxf-xjc-plugin</artifactId>
					<version>${cxf-xjc.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.felix</groupId>
					<artifactId>maven-bundle-plugin</artifactId>
					<version>${felix.version}</version>
				</plugin>
				<plugin>
					<groupId>org.ops4j.pax.exam</groupId>
					<artifactId>maven-paxexam-plugin</artifactId>
					<version>1.2.4</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.9.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>2.10</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.7</version>
				</plugin>
				<plugin>
        			<groupId>org.apache.maven.plugins</groupId>
        			<artifactId>maven-compiler-plugin</artifactId>
        			<version>3.5.1</version>
        			<configuration>
          				<source>1.8</source>
          				<target>1.8</target>
        			</configuration>
      			</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>keytool-maven-plugin</artifactId>
					<version>1.5</version>
				</plugin>
				<plugin>
					<groupId>com.coderplus.maven.plugins</groupId>
					<artifactId>copy-rename-maven-plugin</artifactId>
					<version>1.0.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>commons-lang</groupId>
				<artifactId>commons-lang</artifactId>
				<version>2.6</version>
			</dependency>
			<dependency>
    			<groupId>commons-io</groupId>
    			<artifactId>commons-io</artifactId>
    			<version>${commons-io.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-rt-frontend-jaxrs</artifactId>
				<version>${cxf.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-rt-frontend-jaxws</artifactId>
				<version>${cxf.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-rt-transports-http</artifactId>
				<version>${cxf.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf</groupId>
				<artifactId>cxf-rt-rs-client</artifactId>
				<version>${cxf.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.cxf.xjc-utils</groupId>
				<artifactId>cxf-xjc-runtime</artifactId>
				<version>${cxf-xjc.version}</version>
			</dependency>
			<dependency>
				<groupId>org.postgresql</groupId>
				<artifactId>postgresql</artifactId>
				<version>${postgresql.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
        	<dependency>
            	<groupId>org.springframework.security</groupId>
            	<artifactId>spring-security-core</artifactId>
            	<version>${spring-security.version}</version>
        	</dependency>
        	<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-config</artifactId>
				<version>${spring-security.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-web</artifactId>
				<version>${spring-security.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.security</groupId>
				<artifactId>spring-security-ldap</artifactId>
				<version>${spring-security.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-beans</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-jdbc</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework</groupId>
				<artifactId>spring-context</artifactId>
				<version>${spring.version}</version>
			</dependency>
			<dependency>
    			<groupId>org.springframework</groupId>
    			<artifactId>spring-context-support</artifactId>
    			<version>${spring.version}</version>
			</dependency>
			<dependency>
				<groupId>com.amazonaws</groupId>
				<artifactId>aws-java-sdk-s3</artifactId>
				<version>${amazon-aws.version}</version>
			</dependency>
			<dependency>
 				<groupId>org.irods.jargon</groupId>
 				<artifactId>jargon-core</artifactId>
 				<version>${jargon.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.irods.jargon</groupId>
 				<artifactId>jargon-data-utils</artifactId>
 				<version>${jargon.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.irods.jargon</groupId>
 				<artifactId>jargon-conveyor</artifactId>
 				<version>${jargon-conveyor.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>org.irods.jargon</groupId>
 				<artifactId>jargon-user-tagging</artifactId>
 				<version>${jargon.version}</version>
 			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-core</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.googlecode.json-simple</groupId>
				<artifactId>json-simple</artifactId>
				<version>${google-json-simple.version}</version>
			</dependency>
			<dependency>
    			<groupId>io.jsonwebtoken</groupId>
    			<artifactId>jjwt</artifactId>
    			<version>${jjwt.version}</version>
			</dependency>
			<dependency>
    			<groupId>javax.mail</groupId>
    			<artifactId>javax.mail-api</artifactId>
    			<version>${java-mail.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<repositories>
 		<repository>
 			<id>dice.repository</id>
 			<name>dice.repository</name>
 			<url>https://raw.github.com/DICE-UNC/DICE-Maven/master/releases</url>
 			<releases>
 				<enabled>true</enabled>
 			</releases>
 			<snapshots>
 				<enabled>false</enabled>
 				<updatePolicy>always</updatePolicy>
 				<checksumPolicy>warn</checksumPolicy>
 			</snapshots>
 		</repository>
	</repositories>
</project>
